# Ragnar

./: LICENSE  README.md
side_inter/M-RDMA-master/: .gitignore  CMakeLists copy.txt  CMakeLists.txt  Makefile  README  cmake_install.cmake
side_inter/M-RDMA-master/config/: hosts
side_inter/M-RDMA-master/draw/: batch_a.txt  batch_b.txt  batch_c.txt  batch_size.eps  batch_size.txt  draw_rand_seq.gnuplot  mem.txt  ran_seq.eps  ran_seq.txt  ran_seq_local.eps  ran_seq_r.eps  ran_seq_w.eps  ran_seq_w_r.eps  thread_num.eps  thread_num.txt
side_inter/M-RDMA-master/draw/batch/: algo.c  size-tput.eps  size-tput.gnuplot  size-tput.txt
side_inter/M-RDMA-master/draw/hashtable/: batch.eps  hashtable.cache  hashtable.cache.ratio  hashtable.cache.short  hashtable.eps  hashtable.gnuplot  hashtable.normal  hashtable.txt  ratio.eps
side_inter/M-RDMA-master/draw/join/: join-large.eps  join-scale.eps  join.eps  join.gnuplot  join.large.txt  join.scale.txt  join.txt  join_basic.txt
side_inter/M-RDMA-master/draw/lock/: ._seq.eps  back-off.txt  lock-base.txt  lock.eps  lock.gnuplot  lock.txt  lock_back_off.eps  seq.eps  seq.txt
side_inter/M-RDMA-master/draw/log/: log-batch.eps  log.gnuplot  log.txt  log_basic.txt
side_inter/M-RDMA-master/draw/shuffle/: data.sgl  data.sp  data.sp.unsig  shuffle.eps  shuffle.gnuplot  shuffle.txt  shuffle_sgl.eps  (+5 more)
side_inter/M-RDMA-master/micro-bench/: .two-thread-read.cc.swp  .two-thread-write.cc.swp  Makefile  rand-seq.txt  res.ib_read_bw.txt  res.ib_write_bw.txt  res.ib_write_lat.txt  res.txt  test-mem-rand-seq  test-mem-rand-seq.cc  test-mem-rand-seq.sh  test-numa-rdma.sh  test.sh  thread.sh  thread.txt  two-thread-read  two-thread-write  two-thread-write-my.cc  two-thread-write.cc  vector-io  vector-io.cc  vector-io.sh  vector-io.txt
side_inter/M-RDMA-master/script/: cal.py  cal.sh  cal_batch.py  cal_join.sh  cal_lock.sh  cal_log.sh  run_all_hashtable.sh  run_all_hashtable_batch.sh  run_all_hashtable_loop.sh  run_all_join_batch.1.sh  run_all_join_batch.sh  run_all_join_loop.sh  run_all_log_batch.sh  run_all_log_loop.sh  run_all_shuffle.sh  run_all_shuffle_batch.sh  run_all_shuffle_loop.sh  run_all_writer.sh  run_all_writer_loop.sh  run_test_batch.sh  run_test_rand_seq.sh
(+84 files in other folders)
